samples/_failures_safe/1761248242_7ed3b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89dac7c2.c: In function ‘main’:
./samples/SAFE/__tmp_89dac7c2.c:154:5: error: expected expression at end of input
  154 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_89dac7c2.c:154:5: error: expected declaration or statement at end of input
